Fix image cutoff, favorite & casting on search page

--- a/style/style.css
+++ b/style/style.css
@@ -26,10 +26,11 @@
 	vertical-align: top;
 	display: inline-block;
 	box-sizing: border-box;
+	line-height: normal;
 }
 #profile-list .rbprofile-list .image {
 	width: 100%;
-	height: 200px;	
+	height: 230px;	
 	overflow: hidden;
 	text-align: center;
 	position: relative;
@@ -53,9 +54,8 @@
 	max-width: none!important;
 }
 #profile-list .rbprofile-list .image.image-broken {
-	height: 200px;
 	text-align: center;
-	line-height: 200px;
+	line-height: 230px;
 	background: #f8ced6;
 }
 #profile-list .rbprofile-list .image.image-broken a {
@@ -510,6 +510,7 @@ height: 160px;
 background-size: 150px;
 display: block;
 }
+.rb_profile_tool { font-size: 13px; }
 .rb_profile_tool div.favorite { float: left; }
 .rb_profile_tool div.casting { float: right; padding-top: 5px; }
 .rb_profile_tool a { text-decoration: none; }
